--- a/MvcBackbone/MvcBackbone.csproj
+++ b/MvcBackbone/MvcBackbone.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -68,6 +69,7 @@
   <ItemGroup>
     <Content Include="Content\todo.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\album.js" />
     <Content Include="Scripts\backbone-localstorage.js" />
     <Content Include="Scripts\backbone.js" />
     <Content Include="Scripts\todos.js" />
@@ -102,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Album\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
