--- a/MvcBackbone/MvcBackbone.csproj
+++ b/MvcBackbone/MvcBackbone.csproj
@@ -71,9 +71,16 @@
     <Content Include="Content\screen.css" />
     <Content Include="Content\todo.css" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\album.js" />
+    <Content Include="Scripts\jquery-1.5.1.min.js" />
+    <Content Include="Scripts\modernizr-1.6.min.js" />
+    <Content Include="Scripts\Tunes.js" />
     <Content Include="Scripts\backbone-localstorage.js" />
     <Content Include="Scripts\backbone.js" />
+    <Content Include="Scripts\test-js\lib\jasmine-1.0.2\jasmine-html.js" />
+    <Content Include="Scripts\test-js\lib\jasmine-1.0.2\jasmine.css" />
+    <Content Include="Scripts\test-js\lib\jasmine-1.0.2\jasmine.js" />
+    <Content Include="Scripts\test-js\SpecRunner.html" />
+    <Content Include="Scripts\test-js\spec\TunesSpec.js" />
     <Content Include="Scripts\todos.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Web.config" />
@@ -109,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Album\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Scripts\test-js\lib\jasmine-1.0.2\MIT.LICENSE" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
